--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="/css/grayscale.min.css" rel="stylesheet">
+  <link href="css/grayscale.min.css" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154525719-1"></script>
@@ -138,10 +138,7 @@
           <a href="https://www.limitlessmountains.com/#about" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">About Us</a>
 
         </div>
-          <div class="card-body">
-            <h5 class="card-title">About Us</h5>
-            <p class="card-text">Former UK Special Forces and Royal Marine Commandos</p>
-          </div>
+
         </div>
         <div class="card">
           <div class="container_two">
@@ -149,10 +146,7 @@
           <a href="https://www.limitlessmountains.com/#about" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Experiences</a>
 
         </div>
-          <div class="card-body">
-            <h5 class="card-title">Experiences</h5>
-            <p class="card-text">Learn about how we can help your team grow.</p>
-          </div>
+
         </div>
 
         <div class="card">
@@ -160,10 +154,7 @@
           <img src="img/contact_us.png" class="card-img-top" alt="Simon Weatherall - Limitless">
           <a href="https://www.limitlessmountains.com/#contact" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Contact</a>
         </div>
-          <div class="card-body">
-            <h5 class="card-title">Contact Us</h5>
-            <p class="card-text">Fill out our webform so we can provide you more information</p>
-          </div>
+
         </div>
 
       </div>
@@ -183,22 +174,16 @@
       <div class="card">
         <div class="container_two">
         <img src="img/mountain_data_science.png" class="card-img-top" alt="Simon Weatherall - Limitless">
-        <a href="https://www.limitlessmountains.com/#intelligence" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Intelligence</a>
+        <a href="https://www.limitlessmountains.com/#intelligence" type="button"  class="btn btn-outline-danger btn-lg js-scroll-trigger">Intelligence</a>
       </div>
-        <div class="card-body">
-          <h5 class="card-title">Intelligence</h5>
-          <p class="card-text">How we use data science and ai to statisitcally grow your culture.</p>
-        </div>
+
       </div>
       <div class="card">
         <div class="container_two">
         <img src="img/adventures.png" class="card-img-top" alt="Simon Weatherall - Limitless">
         <a href="https://www.limitlessmountains.com/#about" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Adventures</a>
       </div>
-        <div class="card-body">
-          <h5 class="card-title">Adventures</h5>
-          <p class="card-text">How we create custom experiences to motivate your team.</p>
-        </div>
+
       </div>
 
 
