updated logo link

--- a/intelligence.html
+++ b/intelligence.html
@@ -72,7 +72,7 @@
         </ul>
       </div>
 
-        <img src="images_2/limitlessmountains_red.png" href="#page-top"></img>
+        <img src="images_2/limitlessmountains_red.png" href="https://www.limitlessmountains.com"></img>
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
 
