--- a/contact.html
+++ b/contact.html
@@ -64,15 +64,15 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-right">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">Experiences</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/about.html">Experiences</a>
           </li>
         </ul>
       </div>
 
-        <img src="images_2/limitlessmountains_red.png" href="https://www.limitlessmountains.com/#about"></img>
+        <img src="images_2/limitlessmountains_red.png" href="https://www.limitlessmountains.com"></img>
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
 
