--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-right">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">Experiences</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/about.html">Experiences</a>
           </li>
         </ul>
       </div>
 
-        <img src="images_2/limitlessmountains_red.png" href="https://www.limitlessmountains.com/#about"></img>
+        <img src="images_2/limitlessmountains_red.png" href="https://www.limitlessmountains.com"></img>
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
 
@@ -135,7 +135,7 @@
           <div class="container_two">
           <img src="img/about_us.png" class="card-img-top" alt="Simon Weatherall - Limitless">
           <!-- <button class="btn ">About Us</button> -->
-          <a href="https://www.limitlessmountains.com/#about" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">About Us</a>
+          <a href="https://www.limitlessmountains.com/about.html" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">About Us</a>
 
         </div>
 
@@ -143,7 +143,7 @@
         <div class="card">
           <div class="container_two">
           <img src="img/experiences.png" class="card-img-top" alt="Simon Weatherall - Limitless">
-          <a href="https://www.limitlessmountains.com/#about" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Experiences</a>
+          <a href="https://www.limitlessmountains.com/about.html" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Experiences</a>
 
         </div>
 
@@ -152,7 +152,7 @@
         <div class="card">
           <div class="container_two">
           <img src="img/contact_us.png" class="card-img-top" alt="Simon Weatherall - Limitless">
-          <a href="https://www.limitlessmountains.com/#contact" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Contact</a>
+          <a href="https://www.limitlessmountains.com/contact.html" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Contact</a>
         </div>
 
         </div>
@@ -174,14 +174,14 @@
       <div class="card">
         <div class="container_two">
         <img src="img/mountain_data_science.png" class="card-img-top" alt="Simon Weatherall - Limitless">
-        <a href="https://www.limitlessmountains.com/#intelligence" type="button"  class="btn btn-outline-danger btn-lg js-scroll-trigger">Intelligence</a>
+        <a href="https://www.limitlessmountains.com/intelligence.html" type="button"  class="btn btn-outline-danger btn-lg js-scroll-trigger">Intelligence</a>
       </div>
 
       </div>
       <div class="card">
         <div class="container_two">
         <img src="img/adventures.png" class="card-img-top" alt="Simon Weatherall - Limitless">
-        <a href="https://www.limitlessmountains.com/#about" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Adventures</a>
+        <a href="https://www.limitlessmountains.com/about.html" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Adventures</a>
       </div>
 
       </div>
