--- a/intelligence.html
+++ b/intelligence.html
@@ -64,10 +64,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-right">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/#about">Experiences</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/about.html">Experiences</a>
           </li>
         </ul>
       </div>
