tweek to css and img
jim img update link and css / added again

--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
             </div>
             <div class="card">
               <div class="container_two">
-              <img src="img/Jim.png" class="card-img-top" alt="Simon Weatherall - Limitless">
+              <img src="img/jim.png" class="card-img-top" alt="Jim Walker - Limitless">
             </div>
               <div class="card-body">
                 <h5 class="card-title">Jim</h5>
@@ -175,7 +175,7 @@
 
             <div class="card">
               <div class="container_two">
-              <img src="img/kat.png" class="card-img-top" alt="Simon Weatherall - Limitless">
+              <img src="img/kat.png" class="card-img-top" alt="Kat - Limitless">
             </div>
               <div class="card-body">
                 <h5 class="card-title">Kat</h5>
