--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/limitless_intelligence.html">Intelligence</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/intelligence.html">Intelligence</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/contact.html">Contact</a>
