logo url update
update

--- a/intelligence.html
+++ b/intelligence.html
@@ -64,16 +64,17 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-right">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/about.html">About</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/about.html">Experiences</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/about.html">About</a>
           </li>
         </ul>
       </div>
+      <a href="https://www.limitlessmountains.com">
 
-        <img src="images_2/limitlessmountains_red.png" href="https://www.limitlessmountains.com"></img>
-
+        <img src="images_2/limitlessmountains_red.png"></img>
+      </a>
         <div class="collapse navbar-collapse" id="navbarResponsive">
 
         <ul class="navbar-nav ml-auto">
