--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Limitless</h1>
-          <h3 class="text-white mx-auto mt-2 mb-5">MOUNTAIN EXPERIENCES</h3>
+          <h3 class="text-white mx-auto mt-2 mb-5">MOUNTAIN ADVENTURES</h3>
         <a href="#learn-more" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">Learn More</a>
       </div>
     </div>
