about btn update
updated

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <div class="container_two">
           <img src="img/about_us.png" class="card-img-top" alt="Simon Weatherall - Limitless">
           <!-- <button class="btn ">About Us</button> -->
-          <a href="https://www.limitlessmountains.com/about.html" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">About Us</a>
+          <a href="https://www.limitlessmountains.com/about.html" type="button" class="btn btn-outline-danger btn-lg js-scroll-trigger">About</a>
 
         </div>
 
