footer and page updates

--- a/Limitless_Mountains_Privacy_Policy.html
+++ b/Limitless_Mountains_Privacy_Policy.html
@@ -533,10 +533,10 @@ information you provided to us in its original form from our servers.</p>
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-envelope text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Email</h4>
+              <h4 class="text-uppercase m-0">Instagram</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">team@limitless.com</a>
+                <a href="#">@limitlessmountains</a>
               </div>
             </div>
           </div>
@@ -546,9 +546,9 @@ information you provided to us in its original form from our servers.</p>
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Phone</h4>
+              <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+44 7738 737884</div>
+              <div class="small text-black-50">team@limitless.com</div>
             </div>
           </div>
         </div>
